--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,6 +14,11 @@ font-weight: 900;
 body
 {
     background-image: url("../pictures/backgroundImagePortfolio.jpg");
-    background-color: #cccccc;
+    background-color: #fbfbfb;
   }
-  p {color:#499595}
+  p {color:#499595;
+background-color: #fbfcfc;
+   }
+   .container 
+   {background-color: #fbfcfc;
+color:#499595;}
