--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,24 +1,24 @@
 .navbar-brand {
   background-color: #66cccc;
-  color: white!important;
+  color: white !important;
   font-weight: 700;
 }
 
-h1 
-{color:#2d5c5c;
-font-weight: 900;
-
-
+h1 {
+  color: #2d5c5c;
+  font-weight: 900;
+  text-decoration: underline;
 }
 
-body
-{
-    background-image: url("../pictures/backgroundImagePortfolio.jpg");
-    background-color: #fbfbfb;
-  }
-  p {color:#499595;
-background-color: #fbfcfc;
-   }
-   .container 
-   {background-color: #fbfcfc;
-color:#499595;}
+body {
+  background-image: url("../pictures/backgroundImagePortfolio.jpg");
+  background-color: #fbfbfb;
+}
+p {
+  color: #499595;
+  background-color: #fbfcfc;
+}
+.container {
+  background-color: #fbfcfc;
+  color: #4d817c;
+}
